fake schema validation for devfile 2
Signed-off-by: Michal Vala <mvala@redhat.com>